--- a/ReserverYourRoom/Base.lproj/Main.storyboard
+++ b/ReserverYourRoom/Base.lproj/Main.storyboard
@@ -39,8 +39,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="120" sectionHeaderHeight="1" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="1yn-mA-soq">
-                                <frame key="frameInset" minY="110" width="375" height="485"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="120" sectionHeaderHeight="1" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="1yn-mA-soq">
+                                <frame key="frameInset" minY="91" width="375" height="485"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cellRoom" rowHeight="120" id="56H-EY-94Q" customClass="TableViewCell" customModule="ReserverYourRoom" customModuleProvider="target">
@@ -234,10 +235,7 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="71E-eh-J96" firstAttribute="top" secondItem="1yn-mA-soq" secondAttribute="bottom" constant="40" id="FDY-UL-rPr"/>
                             <constraint firstItem="71E-eh-J96" firstAttribute="top" secondItem="i36-Of-DmS" secondAttribute="bottom" id="JQi-Wf-OoT"/>
-                            <constraint firstAttribute="trailing" secondItem="1yn-mA-soq" secondAttribute="trailing" id="Kdy-0A-ncD"/>
-                            <constraint firstItem="1yn-mA-soq" firstAttribute="leading" secondItem="bt6-JF-xim" secondAttribute="leading" id="a5j-Ft-fpq"/>
                             <constraint firstAttribute="trailing" secondItem="i36-Of-DmS" secondAttribute="trailing" id="bbg-iK-WI3"/>
                             <constraint firstItem="i36-Of-DmS" firstAttribute="leading" secondItem="bt6-JF-xim" secondAttribute="leading" id="uTb-8C-p0G"/>
                         </constraints>
@@ -246,6 +244,7 @@
                     <connections>
                         <outlet property="cityFilter" destination="x3c-UN-fm4" id="FRX-kI-vjH"/>
                         <outlet property="filterBtn" destination="e5Y-GA-Qx2" id="tvP-rW-mVI"/>
+                        <outlet property="filterView" destination="2f8-rf-pMw" id="64M-Tf-h4f"/>
                         <outlet property="infrastructureFilter" destination="ZdO-0R-WdN" id="lHj-K7-VBw"/>
                         <outlet property="resultLabel" destination="i36-Of-DmS" id="Wlv-Dg-aCZ"/>
                         <outlet property="roomFilter" destination="VOQ-zG-kdk" id="EvR-KL-DiZ"/>
