--- a/ReserverYourRoom/Base.lproj/Main.storyboard
+++ b/ReserverYourRoom/Base.lproj/Main.storyboard
@@ -39,9 +39,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="120" sectionHeaderHeight="1" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="1yn-mA-soq">
-                                <frame key="frameInset" minY="91" width="375" height="485"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="120" sectionHeaderHeight="1" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="1yn-mA-soq">
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cellRoom" rowHeight="120" id="56H-EY-94Q" customClass="TableViewCell" customModule="ReserverYourRoom" customModuleProvider="target">
@@ -132,9 +130,7 @@
                                     <outlet property="delegate" destination="Rqt-6B-3MH" id="TcG-uH-PKJ"/>
                                 </connections>
                             </tableView>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2f8-rf-pMw" userLabel="filters">
-                                <frame key="frameInset" minY="110" width="375" height="485"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2f8-rf-pMw" userLabel="filters">
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZdO-0R-WdN">
                                         <frame key="frameInset" minX="311" minY="29" width="43" height="40"/>
@@ -201,9 +197,7 @@
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="A4M-Xm-fgW" userLabel="header">
-                                <frame key="frameInset" minY="64" width="375" height="38"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="A4M-Xm-fgW" userLabel="header">
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e5Y-GA-Qx2">
                                         <frame key="frameInset" minX="8" minY="8" width="36" height="30"/>
@@ -224,7 +218,7 @@
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i36-Of-DmS">
+                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.80000000000000004" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i36-Of-DmS">
                                 <constraints>
                                     <constraint firstAttribute="height" constant="24" id="vUh-JO-SCw" userLabel="height = 40"/>
                                 </constraints>
@@ -235,8 +229,21 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="1yn-mA-soq" firstAttribute="trailing" secondItem="2f8-rf-pMw" secondAttribute="trailing" id="0yh-iS-cbZ"/>
+                            <constraint firstItem="71E-eh-J96" firstAttribute="top" secondItem="1yn-mA-soq" secondAttribute="bottom" constant="23" id="5Y8-68-yDB"/>
+                            <constraint firstItem="2f8-rf-pMw" firstAttribute="top" secondItem="A4M-Xm-fgW" secondAttribute="bottom" constant="8" symbolic="YES" id="7pf-UH-esF"/>
+                            <constraint firstItem="1yn-mA-soq" firstAttribute="trailing" secondItem="A4M-Xm-fgW" secondAttribute="trailing" id="AvR-UI-vDf"/>
                             <constraint firstItem="71E-eh-J96" firstAttribute="top" secondItem="i36-Of-DmS" secondAttribute="bottom" id="JQi-Wf-OoT"/>
+                            <constraint firstItem="1yn-mA-soq" firstAttribute="top" secondItem="X2B-oS-sFC" secondAttribute="bottom" constant="27" id="Niw-VO-SeP"/>
+                            <constraint firstItem="1yn-mA-soq" firstAttribute="width" secondItem="bt6-JF-xim" secondAttribute="width" id="Yct-1r-t4t"/>
                             <constraint firstAttribute="trailing" secondItem="i36-Of-DmS" secondAttribute="trailing" id="bbg-iK-WI3"/>
+                            <constraint firstItem="2f8-rf-pMw" firstAttribute="top" secondItem="A4M-Xm-fgW" secondAttribute="bottom" constant="8" id="fHJ-Kc-eZg"/>
+                            <constraint firstItem="1yn-mA-soq" firstAttribute="leading" secondItem="2f8-rf-pMw" secondAttribute="leading" id="ghr-GF-nZL"/>
+                            <constraint firstItem="1yn-mA-soq" firstAttribute="leading" secondItem="i36-Of-DmS" secondAttribute="leading" id="gvB-J9-YHd"/>
+                            <constraint firstItem="2f8-rf-pMw" firstAttribute="top" secondItem="bt6-JF-xim" secondAttribute="top" constant="110" id="hyJ-pX-ood"/>
+                            <constraint firstItem="A4M-Xm-fgW" firstAttribute="top" secondItem="X2B-oS-sFC" secondAttribute="bottom" id="n2f-Sb-ALS"/>
+                            <constraint firstItem="1yn-mA-soq" firstAttribute="bottom" secondItem="2f8-rf-pMw" secondAttribute="bottom" id="prZ-w9-y7J"/>
+                            <constraint firstItem="1yn-mA-soq" firstAttribute="leading" secondItem="A4M-Xm-fgW" secondAttribute="leading" id="pvz-pb-q74"/>
                             <constraint firstItem="i36-Of-DmS" firstAttribute="leading" secondItem="bt6-JF-xim" secondAttribute="leading" id="uTb-8C-p0G"/>
                         </constraints>
                     </view>
