--- a/ReserverYourRoom/Base.lproj/Main.storyboard
+++ b/ReserverYourRoom/Base.lproj/Main.storyboard
@@ -42,7 +42,7 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="120" sectionHeaderHeight="1" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="1yn-mA-soq">
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cellRoom" rowHeight="120" id="56H-EY-94Q" customClass="TableViewCell" customModule="ReserverYourRoom" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cellRoom" rowHeight="120" id="56H-EY-94Q" customClass="RoomViewCell" customModule="ReserverYourRoom" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="65" width="375" height="120"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="56H-EY-94Q" id="Zll-Fs-Ceg">
@@ -118,16 +118,16 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <outlet property="address" destination="d6O-pH-VKR" id="F2P-vU-8gZ"/>
-                                            <outlet property="infrastructure" destination="mgz-rv-ASX" id="qbz-M6-U2u"/>
-                                            <outlet property="location" destination="jnd-my-9R8" id="CEo-KN-QW3"/>
-                                            <outlet property="roomname" destination="Yc9-Ga-c8a" id="Rfu-4h-jjQ"/>
+                                            <outlet property="address" destination="d6O-pH-VKR" id="oS1-qP-XDk"/>
+                                            <outlet property="infrastructure" destination="mgz-rv-ASX" id="F5k-tk-h22"/>
+                                            <outlet property="location" destination="jnd-my-9R8" id="aLD-3I-b3w"/>
+                                            <outlet property="roomname" destination="Yc9-Ga-c8a" id="ral-aq-yKe"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
-                                    <outlet property="dataSource" destination="Rqt-6B-3MH" id="jFq-p8-HQA"/>
-                                    <outlet property="delegate" destination="Rqt-6B-3MH" id="TcG-uH-PKJ"/>
+                                    <outlet property="dataSource" destination="Rqt-6B-3MH" id="Ixj-uI-Vaa"/>
+                                    <outlet property="delegate" destination="Rqt-6B-3MH" id="N1h-dh-Lq3"/>
                                 </connections>
                             </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2f8-rf-pMw" userLabel="filters">
